feat: recreate application command
